@@ -61,5 +61,7 @@
 #define __NR_statmount		457
 #define __NR_listmount		458
 #define __NR_mseal		462
+#define __NR_file_getattr	468
+#define __NR_file_setattr	469
 
 #endif
