@@ -28,6 +28,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 510864  Add SSE4.1 PMAXSD and PMINSD instructions support for 32-bit x86
 413369  unhandled amd64-darwin syscall: unix:151 (getpgid)
 487055  memcheck/tests/x86-linux/scalar fails running in Docker
+510416  Missing syswraps for file_getattr and file_setattr
 511329  Darwin and FreeBSD: Move setting of carry flag out of
         ML_(do_syscall_for_client_WRK)
 511713  Refactor syscall argument handling
